[package]
name = "yew-sse"
version = "0.4.0"
authors = ["liquidblock <liquidblock@users.noreply.github.com>"]
edition = "2018"
description = "EventSource bindings for yew used for handling of server-sent events (SSE)."
repository = "https://github.com/liquidblock/yew-sse.git"
license = "MIT OR Apache-2.0"
keywords = ["sse", "event-source", "yew", "web", "webasm"]
categories = ["wasm"]
publish = false
readme = "README.md"

[features]
default = []
std_web = [ "yew/std_web", "yew/services", "stdweb", "stdweb-derive" ]
web_sys = [ "yew/web_sys", "yew/services", "web-sys", "wasm-bindgen", "gloo-events" ]

[dependencies]
yew = { version = "0.16.2", optional = true, default-features = false }  
stdweb = { version = "0.4.20", optional = true }
stdweb-derive = { version = "0.5.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
cfg-if = "0.1"
cfg-match = "0.2"
gloo-events = { version = "0.1.1", optional = true }
http = "0.2.1"

[dependencies.web-sys]
optional = true
version = "*"
features = [
  'Event',
  'EventSource',
  'EventSourceInit',
  'EventListener',
  'MessageEvent',
]
